# snrg-hr

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
snrg_hr/: hooks.py  modules.txt  setup.py
snrg_hr/api/: job_offer.py
snrg_hr/public/js/: job_offer.js
