[project]
name = "snrg_hr"
version = "0.0.1"
authors = [
    { name = "SNRG Electricals", email = "admin@snrgelectricals.com" }
]
description = "Custom ERPNext HR automation for SNRG Electricals"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.app-dependencies]
frappe = ">=15.0.0"
